# Dimensional

./: .clang-tidy  .gitignore  .gitlab-ci.yml  BaseDimension.cpp  BaseDimension.h  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DerivedDimension.template  DimensionUtilities.h  Dockerfile  FundamentalDimension.template  GenerateAllDerived.sh  GenerateAllFundamental.sh  GenerateDerivedDimension.py  GenerateFundamentalDimension.py  LICENSE  LengthDimension.cpp  LengthDimension.h  MassDimension.h  README.md  Simplification.h  SpeedDimension.cpp  SpeedDimension.h  TestingGrounds.cpp  TimeDimension.cpp  TimeDimension.h  UnitDefinitions.cpp  conanfile.py  sonar-project.properties  suppressions.txt
Benchmark/: CMakeLists.txt  ExampleBenchmark.cpp
Dimension/: Acceleration.h  AccelerationDimension.h  AmountDimension.h  Angle.h  AngleDimension.h  AngularAccelerationDimension.h  AngularSpeedDimension.h  AreaDimension.h  BaseDimension.h  CMakeLists.txt  CapacitanceDimension.h  ChargeDimension.h  ConductanceDimension.h  CurrentDimension.h  DensityDimension.h  DiffusionCoefficientDimension.h  DimensionUtilities.h  DimensionalConstants.h  DimensionalMolarMasses.h  DynamicViscosityDimension.h  ElectricFieldDimension.h  ElectricPotentialDimension.h  EnergyDimension.h  EntropyDimension.h  Extension.md  Force.h  ForceDimension.h  FrequencyDimension.h  HeatFluxDimension.h  InductanceDimension.h  Length.h  LengthDimension.h  MagneticFieldDimension.h  MagneticFluxDimension.h  Mass.h  MassDimension.h  MassFlowRateDimension.h  MolarMassDimension.h  MomentOfInertiaDimension.h  MomentumDimension.h  (+26 more)
Dimension/Dimension_Core/: Coefficient.h  Conversion.h  FundamentalUnitExtractor.h  GenericTypeTraits.h  Hashing.h  Point.h  PrecisionType.h  Quantity.h  SI_Macro.h  Serialization.h  SerializationPolicies.h  Stream.h  StringLiteral.h  TupleHandling.h  UnitSimplifier.h  UnitSimplifierWORKING.h  UnitValidation.h  base_dimension_signature.h
Dimension/Dimension_Core/TemplateUtils/: GenericUtils.h  RatioUtils.h
Dimension/Dimension_Core/internal_temp/: FundamentalUnitExtractor.h  TupleHandling.h  UnitSimplifier.h  UnitValidation.h  point.h
Dimension/Dimension_Core/serialization/: Hashing.h  Serialization.h  SerializationPolicies.h
Dimension/Dimension_Core/streaming/: Stream.h
Dimension/Dimension_Impl/: Conversion.h  FundamentalUnitExtractor.h  GenericTypeTraits.h  UnitSimplifier.h  UnitValidation.h
Dimension/Dimension_Impl/DerivedDimensions/: AccelerationDimension_Impl.h  AngularAccelerationDimension_Impl.h  AngularSpeedDimension_Impl.h  AreaDimension_Impl.h  CapacitanceDimension_Impl.h  ConductanceDimension_Impl.h  CurrentDimension_Impl.h  DensityDimension_Impl.h  DiffusionCoefficientDimension_Impl.h  DynamicViscosityDimension_Impl.h  ElectricFieldDimension_Impl.h  ElectricPotentialDimension_Impl.h  EnergyDimension_Impl.h  EntropyDimension_Impl.h  ForceDimension_Impl.h  FrequencyDimension_Impl.h  HeatFluxDimension_Impl.h  InductanceDimension_Impl.h  MagneticFieldDimension_Impl.h  MagneticFluxDimension_Impl.h  MassFlowRateDimension_Impl.h  MolarMassDimension_Impl.h  MomentOfInertiaDimension_Impl.h  MomentumDimension_Impl.h  PowerDimension_Impl.h  PressureDimension_Impl.h  ResistanceDimension_Impl.h  SpecificHeatCapacityDimension_Impl.h  SpecificVolumeDimension_Impl.h  SpeedDimension_Impl.h  TorqueDimension_Impl.h  VolumeDimension_Impl.h  VolumetricFlowRateDimension_Impl.h  acceleration_dimension_Impl.h  angular_acceleration_dimension_Impl.h  angular_speed_dimension_Impl.h  area_dimension_Impl.h  capacitance_dimension_Impl.h  conductance_dimension_Impl.h  current_dimension_Impl.h  (+26 more)
Dimension/Dimension_Impl/FundamentalDimensions/: AmountDimension_Impl.h  AngleDimension_Impl.h  AngleExtras.h  ChargeDimension_Impl.h  LengthDimension_Impl.h  MassDimension_Impl.h  NEWTemperatureDimension_Impl.h  TemperatureDimension_Impl.h  TimeDimension_Impl.h  amount_dimension_Impl.h  angle_dimension_Impl.h  mass_dimension_Impl.h  (+4 more)
Dimension/Dimension_Meta/: CancelUnits.h  Concepts.h  Conversion.h  FundamentalUnitExtractor.h  GenericTypeTraits.h  PrecisionType.h  TypeTraits.h  UnitSimplifier.h
Dimension/ExampleExtensions/: CMakeLists.txt  NewLengthUnits.h
Dimension/PhysicsProblemsExamples/: CMakeLists.txt  Example1.cpp  PhysicsProblemsBase.cpp  PhysicsProblemsBase.h
Dimension/UnitTest/: CMakeLists.txt  DimensionTest.cpp  DimensionTest.h  TestCastOperators.cpp  TestCompoundConversions.cpp  TestFunctions.cpp  TestFundamentalConversions.cpp  TestNewDimension.cpp  TestOperators.cpp  TestQuantityAdditionSubtraction.cpp  TestSerialization.cpp  TestSimplification.cpp  TestStd.cpp  TestStd.h  TestSymbols.cpp  TestTemp.cpp  TestTrig.cpp  TestTrig.h  TestUtilities.cpp  TestUtilities.h  UnitTests.cmake
Dimension/dimensions/: dimensional_constants.h  dimensional_molar_masses.h  dimensions.h
Dimension/docs/: Extension.md  Serialization.md  Usage.md
StaticDimension/: BaseDimension.h  CMakeLists.txt  DimensionUtilities.h  LengthDimension.h  MassDimension.h  SpeedDimension.h  StaticAngle.h  StaticBaseDimension.h  StaticDimensionUtilities.h  StaticForce.h  StaticLength.h  StaticMass.h  StaticSpeed.h  StaticTemperature.h  StaticTime.h  StaticVolume.h  TimeDimension.h
StaticDimension/ExampleExtensions/: CMakeLists.txt  NewLengthUnits.h
StaticDimension/PhysicsProblemsExamples/: CMakeLists.txt  Example1.cpp  Example1.h
StaticDimension/UnitTest/: CMakeLists.txt  DimensionTest.h  TestCastOperators.cpp  TestCompoundConversions.cpp  TestCompoundConversions.h  TestFundamentalConversions.cpp  TestFundamentalConversions.h  TestNewDimension.cpp  TestOperators.cpp  TestOperators.h  TestSimplification.cpp  TestStd.cpp  TestTrig.cpp  TestUtilities.cpp  UnitTests.cmake
UnitTest/: CMakeLists.txt  DimensionTest.cpp  DimensionTest.h  TestCastOperators.cpp  TestCastOperators.h  TestCompoundConversions.cpp  TestCompoundConversions.h  TestFundamentalConversions.cpp  TestFundamentalConversions.h  TestNewDimension.cpp  TestOperators.cpp  TestOperators.h  TestSimplification.cpp  TestSimplification.h  TestUtilities.cpp
(+438 files in other folders)
